<resources>
    <string name="app_name">Árukereső portál kategóriákkal és rendezési lehetőségekkel</string>
    <string name="username">Felhasználónév</string>
    <string name="pass">Jelszó</string>
    <string name="registration">Regisztráció</string>
    <string name="loginAsGuest">Bejelentkezés Vendégként</string>
    <string name="loginWithGoogle">Bejelentkezés Google fiókkal</string>
    <string name="login">Bejelentkezés</string>
    <string name="cancel">Mégse</string>
    <string name="passAgain">Jelszó megerősítése</string>
    <string name="email">E-mail cím</string>
    <string name="toCart">Kosárba</string>


    <string name="titlePlaceholder">Név</string>
    <string name="descriptionPlaceholder">Leírás</string>
    <string name="item_info">Információ a termékről</string>
    <string name="price">Ár</string>
    <string name="this_is_an_image">Ez egy kép</string>
    <string name="search">Keresés</string>
    <string name="logOut">Kijelentkezés</string>
    <string name="select">Választ</string>
    <string name="a_z"><![CDATA[a->z]]></string>
    <string name="z_a"><![CDATA[z->a]]></string>
    <string name="deleteUser">Felhasználó törlése</string>
    <string name="delete">Törlés</string>

    <string-array name="itemTitles">
        <item>Kenyér</item>
        <item>Tej</item>
        <item>Vaj</item>
        <item>Marhahús</item>
        <item>Kalács</item>
    </string-array>

    <string-array name="itemDescriptions">
        <item>Fehér kenyér</item>
        <item>2,8% zsírtartalmú tej</item>
        <item>Ez vaj</item>
        <item>Magyar termék</item>
        <item>Fonott kalács</item>
    </string-array>

    <array name="itemRates">
        <item>5.0</item>
        <item>4.2</item>
        <item>3.8</item>
        <item>5.0</item>
        <item>3.5</item>
    </array>

    <array name="itemImages">
        <item>@drawable/bread</item>
        <item>@drawable/milk</item>
        <item>@drawable/butter</item>
        <item>@drawable/meat</item>
        <item>@drawable/kalacs</item>
    </array>

    <array name="itemPrices">
        <item>350 Ft</item>
        <item>280 Ft</item>
        <item>525 Ft</item>
        <item>1600 Ft</item>
        <item>970 Ft</item>
    </array>
</resources>