<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuSearch"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        android:orderInCategory="1"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/menuSelector"
        android:title="@string/select"
        android:icon="@drawable/ic_grid"
        app:showAsAction="always"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/menuSort"
        android:title="@string/z_a"
        app:showAsAction="never"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/menuSettings"
        android:title="@string/settings"
        app:showAsAction="never"
        app:actionViewClass="android.widget.ImageView"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/menuLogOut"
        android:title="@string/logOut"
        app:showAsAction="never"
        app:actionViewClass="android.widget.SearchView"
        android:orderInCategory="3"/>

</menu>