<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/list_itemImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/this_is_an_image"/>

        <TextView
            android:id="@+id/item_listTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_itemImageView"
            android:padding="8dp"
            android:text="@string/titlePlaceholder"
            android:textColor="?android:textColorPrimaryInverse"/>

        <RatingBar
            android:id="@+id/item_listRatingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_listTitle"
            android:isIndicator="true"
            android:numStars="5"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/item_listSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_listRatingBar"
            android:padding="8dp"
            android:text="@string/item_info" />

        <TextView
            android:id="@+id/item_listPrice"
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_listSubTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:textColor="@color/purple_500" />

        <Button
            android:id="@+id/item_listAddCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_listPrice"
            android:text="@string/toCart"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>